<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:padding="10dp"
                android:text="@string/judul"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/svBiodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00A8A8A8">

                <LinearLayout
                    android:id="@+id/lyData"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:id="@+id/lyData1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/imgProfil1"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/foto_data_1"
                            android:maxWidth="200dp"
                            android:maxHeight="300dp"
                            app:srcCompat="@drawable/border" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nim"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNim1"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNama1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hobi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtHobi1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtDesc1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="50dp"
                            android:shadowColor="#F36868"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/alamat1"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="mapsOnClick"
                            android:text="@string/alamat" />

                        <Button
                            android:id="@+id/btnTelepon1"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="teleponOnClick"
                            android:text="@string/telepon" />

                        <Button
                            android:id="@+id/email1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="emailOnClick"
                            android:text="@string/email" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyData2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/imgProfil2"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/foto_data_2"
                            android:maxWidth="200dp"
                            android:maxHeight="300dp"
                            app:srcCompat="@drawable/border" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nim"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNim2"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNama2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hobi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtHobi2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtDesc2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="50dp"
                            android:shadowColor="#F36868"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/alamat2"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="mapsOnClick"
                            android:text="@string/alamat" />

                        <Button
                            android:id="@+id/telepon2"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="teleponOnClick"
                            android:text="@string/telepon" />

                        <Button
                            android:id="@+id/email2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="emailOnClick"
                            android:text="@string/email" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyData3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/imgProfil3"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/foto_data_3"
                            android:maxWidth="200dp"
                            android:maxHeight="300dp"
                            app:srcCompat="@drawable/border" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nim"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNim3"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtNama3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hobi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtHobi3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="22dp"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtDesc3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="50dp"
                            android:shadowColor="#F36868"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/alamat3"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="mapsOnClick"
                            android:text="@string/alamat" />

                        <Button
                            android:id="@+id/telepon3"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:onClick="teleponOnClick"
                            android:text="@string/telepon" />

                        <Button
                            android:id="@+id/email3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="emailOnClick"
                            android:text="@string/email" />
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>